--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8" />
   <link rel="icon" href="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#e06f84" />
-  <meta property="og:theme-color" content="#e06f84" />
-  <meta property='og:image' content="https://www.vittoriavitt.com.br/logolink.jpeg" />
-  <meta name="description" content="VittoriaVittStore visite nossa loja!" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <meta name="theme-color" content="" />
+  <meta property="og:theme-color" content="" />
+  <meta property='og:image' content="" />
+  <meta name="description" content="TakeFlix Seu filme você encontra aqui!" />
+  <link rel="apple-touch-icon" href="" />
+  <link rel="manifest" href="" />
   <title>TakeFlix</title>
 </head>
 
