--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#2d2d2d" />
+    <meta property="og:theme-color" content="#2d2d2d" />
+    <meta property="og:image" content="https://takeflix-web.onrender.com/img.png" />
+    <meta name="description" content="TakeFlix Seu filme você encontra aqui!" />
+    <link rel="apple-touch-icon" href="" />
+    <link rel="manifest" href="./manifest.json" />
+    <title>TakeFlix 🎞️</title>
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="" />
-  <meta property="og:theme-color" content="" />
-  <meta property='og:image' content="" />
-  <meta name="description" content="TakeFlix Seu filme você encontra aqui!" />
-  <link rel="apple-touch-icon" href="" />
-  <link rel="manifest" href="" />
-  <title>TakeFlix</title>
-</head>
-
-<body>
-  <div id="root"></div>
-</body>
-
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
