--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="TakeFlix Seu filme você encontra aqui!" />
     <link rel="apple-touch-icon" href="" />
     <link rel="manifest" href="./manifest.json" />
-    <title>TakeFlix 🎞️</title>
+    <title>TakeFlix 🎬</title>
   </head>
 
   <body>
