--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
     <meta name="description" content="TakeFlix Seu filme você encontra aqui!" />
     <link rel="apple-touch-icon" href="" />
     <link rel="manifest" href="./manifest.json" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8283100089080834"
+     crossorigin="anonymous"></script>
     <title>TakeFlix 🎬</title>
   </head>
 
