--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,32 @@
     <meta name="description" content="TakeFlix Seu filme você encontra aqui!" />
     <link rel="apple-touch-icon" href="" />
     <link rel="manifest" href="./manifest.json" />
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8283100089080834"
-     crossorigin="anonymous"></script>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8283100089080834"
+      crossorigin="anonymous"
+    ></script>
     <title>TakeFlix 🎬</title>
   </head>
 
   <body>
     <div id="root"></div>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8283100089080834"
+      crossorigin="anonymous"
+    ></script>
+    <!-- anuncios -->
+    <ins
+      class="adsbygoogle"
+      style="display: block"
+      data-ad-client="ca-pub-8283100089080834"
+      data-ad-slot="1843363779"
+      data-ad-format="auto"
+      data-full-width-responsive="true"
+    ></ins>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
   </body>
 </html>
