--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <!-- anuncios -->
     <ins
       class="adsbygoogle"
-      style="display: block"
+      style="display: block; background-color: #2d2d2d"
       data-ad-client="ca-pub-8283100089080834"
       data-ad-slot="1843363779"
       data-ad-format="auto"
