features and fix

--- a/public/index.html
+++ b/public/index.html
@@ -20,12 +20,12 @@
 
   <body>
     <div id="root"></div>
-    <script
+    <!--
+   <script
       async
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8283100089080834"
       crossorigin="anonymous"
     ></script>
-    <!-- anuncios -->
     <ins
       class="adsbygoogle"
       style="display: block; background-color: #2d2d2d"
@@ -36,6 +36,6 @@
     ></ins>
     <script>
       (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
+    </script>-->
   </body>
 </html>
