--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#2d2d2d" />
     <meta property="og:theme-color" content="#2d2d2d" />
     <meta property="og:image" content="https://takeflix-web.onrender.com/img.png" />
-    <meta name="description" content="TakeFlix Seu filme você encontra aqui!" />
+    <meta name="description" content="TakeFlix Seu filme você encontra aqui! - filmes online gratis - series online gratis" />
     <link rel="apple-touch-icon" href="" />
     <link rel="manifest" href="./manifest.json" />
     <script
