--- a/public/index.html
+++ b/public/index.html
@@ -2,21 +2,26 @@
 <html lang="pt-br">
   <head>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-MW2W75K4TK"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MW2W75K4TK"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-  gtag('config', 'G-MW2W75K4TK');
-</script>
+      gtag("config", "G-MW2W75K4TK");
+    </script>
     <meta charset="utf-8" />
     <link rel="icon" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#2d2d2d" />
     <meta property="og:theme-color" content="#2d2d2d" />
     <meta property="og:image" content="https://takeflix-web.onrender.com/img.png" />
-    <meta name="description" content="TakeFlix Seu filme você encontra aqui! - filmes online gratis - series online gratis" />
+    <meta
+      name="description"
+      content="TakeFlix Seu filme você encontra aqui! - filmes online gratis - series online gratis"
+    />
     <link rel="apple-touch-icon" href="" />
     <link rel="manifest" href="./manifest.json" />
     <script
@@ -29,22 +34,5 @@
 
   <body>
     <div id="root"></div>
-    <!--
-   <script
-      async
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8283100089080834"
-      crossorigin="anonymous"
-    ></script>
-    <ins
-      class="adsbygoogle"
-      style="display: block; background-color: #2d2d2d"
-      data-ad-client="ca-pub-8283100089080834"
-      data-ad-slot="1843363779"
-      data-ad-format="auto"
-      data-full-width-responsive="true"
-    ></ins>
-    <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>-->
   </body>
 </html>
