--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
 
       gtag("config", "G-MW2W75K4TK");
     </script>
+    <meta name="a.validate.02" content="y0hfennw8i1l__sLg2YmhPRGoCSGbjmvDiFJ" />
     <meta charset="utf-8" />
     <link rel="icon" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
