--- a/public/index.html
+++ b/public/index.html
@@ -35,5 +35,12 @@
 
   <body>
     <div id="root"></div>
+    <script
+      data-cfasync="false"
+      type="text/javascript"
+      data-adel="atag"
+      src="//acscdn.com/script/atg.js"
+      czid="rphucgpkd5"
+    ></script>
   </body>
 </html>
