--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,11 @@
     <script
       data-cfasync="false"
       type="text/javascript"
+      src="//buzzonclick.com/a/display.php?r=6957886"
+    ></script>
+    <script
+      data-cfasync="false"
+      type="text/javascript"
       data-adel="atag"
       src="//acscdn.com/script/atg.js"
       czid="rphucgpkd5"
