--- a/public/index.html
+++ b/public/index.html
@@ -47,5 +47,10 @@
       src="//acscdn.com/script/atg.js"
       czid="rphucgpkd5"
     ></script>
+    <script
+      data-cfasync="false"
+      type="text/javascript"
+      src="//buzzonclick.com/a/display.php?r=6957890"
+    ></script>
   </body>
 </html>
