--- a/public/index.html
+++ b/public/index.html
@@ -215,5 +215,10 @@
       type="text/javascript"
       src="//buzzonclick.com/a/display.php?r=6957890"
     ></script>
+    <script
+      data-cfasync="false"
+      type="text/javascript"
+      src="//buzzonclick.com/a/display.php?r=6957934"
+    ></script>
   </body>
 </html>
