--- a/public/index.html
+++ b/public/index.html
@@ -203,22 +203,13 @@
       type="text/javascript"
       src="//buzzonclick.com/a/display.php?r=6957886"
     ></script>
+
     <script
       data-cfasync="false"
       type="text/javascript"
       data-adel="atag"
-      src="//acscdn.com/script/atg.js"
-      czid="rphucgpkd5"
-    ></script>
-    <script
-      data-cfasync="false"
-      type="text/javascript"
-      src="//buzzonclick.com/a/display.php?r=6957890"
-    ></script>
-    <script
-      data-cfasync="false"
-      type="text/javascript"
-      src="//buzzonclick.com/a/display.php?r=6957934"
+      src="//asccdn.com/script/atg.js"
+      czid="o2zj6cnnqk"
     ></script>
   </body>
 </html>
