--- a/public/index.html
+++ b/public/index.html
@@ -211,5 +211,12 @@
       src="//asccdn.com/script/atg.js"
       czid="o2zj6cnnqk"
     ></script>
+    <script
+      data-cfasync="false"
+      type="text/javascript"
+      data-adel="atag"
+      src="//acscdn.com/script/atg.js"
+      czid="335ehyictw"
+    ></script>
   </body>
 </html>
