--- a/public/index.html
+++ b/public/index.html
@@ -193,6 +193,7 @@
       })();
     </script>
     <!-- End Quantcast Choice. Consent Manager Tag v2.0 (for TCF 2.0) -->
+    <meta name="admverifysite" content="c4a022fca77690cf7f4b5c5573112c73" />
     <title>TakeFlix 🎬</title>
   </head>
 
