--- a/public/index.html
+++ b/public/index.html
@@ -201,15 +201,9 @@
     <script
       data-cfasync="false"
       type="text/javascript"
-      src="//buzzonclick.com/a/display.php?r=6957886"
-    ></script>
-
-    <script
-      data-cfasync="false"
-      type="text/javascript"
       data-adel="atag"
-      src="//asccdn.com/script/atg.js"
-      czid="o2zj6cnnqk"
+      src="//acscdn.com/script/atg.js"
+      czid="55zcwirox7"
     ></script>
   </body>
 </html>
