--- a/public/index.html
+++ b/public/index.html
@@ -205,5 +205,17 @@
       src="//acscdn.com/script/atg.js"
       czid="55zcwirox7"
     ></script>
+
+    <script
+      type="text/javascript"
+      src="https://udbaa.com/bnr.php?section=General&pub=282176&format=300x250&ga=g"
+    ></script>
+    <noscript
+      ><a href="https://yllix.com/publishers/282176" target="_blank"
+        ><img
+          src="//ylx-aff.advertica-cdn.com/pub/300x250.png"
+          style="border: none; margin: 0; padding: 0; vertical-align: baseline"
+          alt="ylliX - Online Advertising Network" /></a
+    ></noscript>
   </body>
 </html>
