--- a/public/index.html
+++ b/public/index.html
@@ -206,16 +206,13 @@
       czid="55zcwirox7"
     ></script>
 
+    <script type="text/javascript">
+      var infolinks_pid = 3394846;
+      var infolinks_wsid = 0;
+    </script>
     <script
       type="text/javascript"
-      src="https://udbaa.com/bnr.php?section=General&pub=282176&format=300x250&ga=g"
+      src="http://resources.infolinks.com/js/infolinks_main.js"
     ></script>
-    <noscript
-      ><a href="https://yllix.com/publishers/282176" target="_blank"
-        ><img
-          src="//ylx-aff.advertica-cdn.com/pub/300x250.png"
-          style="border: none; margin: 0; padding: 0; vertical-align: baseline"
-          alt="ylliX - Online Advertising Network" /></a
-    ></noscript>
   </body>
 </html>
