--- a/public/index.html
+++ b/public/index.html
@@ -214,5 +214,18 @@
       type="text/javascript"
       src="http://resources.infolinks.com/js/infolinks_main.js"
     ></script>
+
+    <div id="111774-24">
+      <script src="//ads.themoneytizer.com/s/gen.js?type=24"></script>
+      <script src="//ads.themoneytizer.com/s/requestform.js?siteId=111774&formatId=24"></script>
+    </div>
+    <div id="111774-44">
+      <script src="//ads.themoneytizer.com/s/gen.js?type=44"></script>
+      <script src="//ads.themoneytizer.com/s/requestform.js?siteId=111774&formatId=44"></script>
+    </div>
+    <div id="111774-39">
+      <script src="//ads.themoneytizer.com/s/gen.js?type=39"></script>
+      <script src="//ads.themoneytizer.com/s/requestform.js?siteId=111774&formatId=39"></script>
+    </div>
   </body>
 </html>
