--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     </script>
     <meta name="a.validate.02" content="Ds5kwQipEhXDvCykSZ7AteCh5-lm2K6tgaUz" />
     <meta charset="utf-8" />
-    <link rel="icon" href="" />
+    <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#2d2d2d" />
     <meta property="og:theme-color" content="#2d2d2d" />
@@ -26,7 +26,7 @@
     <link rel="apple-touch-icon" href="" />
     <link rel="manifest" href="./manifest.json" />
 
-    <title>TakeFlix 🎬</title>
+    <title>TakeFlix - Filmes e séries Online Grátis 🎬</title>
   </head>
 
   <body>
