--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <link rel="apple-touch-icon" href="" />
     <link rel="manifest" href="./manifest.json" />
 
-    <title>TakeFlix - Filmes e séries Online Grátis 🎬</title>
+    <title>TakeFlix - Filmes e series Online Gratis</title>
   </head>
 
   <body>
