--- a/public/index.html
+++ b/public/index.html
@@ -31,12 +31,12 @@
 
   <body>
     <div id="root"></div>
-    <script
+   <!--  <script
       data-cfasync="false"
       type="text/javascript"
       data-adel="atag"
       src="//acscdn.com/script/atg.js"
       czid="55zcwirox7"
-    ></script>
+    ></script> -->
   </body>
 </html>
